# b4mesh

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  deploy_live_visualizer.sh
.github/workflows/: green-toolchain-generation.yml  green-toolchain-generation_default_cmake.yml
analysis/: clang-tidy_output.txt  cppcheck_output.xml  cppcheck_output_basic.xml
b4mesh_http/: README.md
b4mesh_http/includes/b4mesh_http/b4mesh/http/: endpoint.hpp
b4mesh_http/tests/sources/: source.cpp
binary/: CMakeLists.txt
binary/sources/: main.cpp
cmake/: CMakeLists.txt  greensoft_toolchain.cmake
cmake/dependencies_management/: LibDBusCXX.cmake  download_boost.cmake  greensoft_toolchain.cmake  greensoftsdk.cmake
cmake/modules/b4mesh/: FindFile.cmake  get_nodes_filestream_path.cmake
cmake/modules/dependencies/: fetch_nlohmann_json.cmake  libdbus-cpp-asio-integration.cmake  libdbus-cpp.cmake
cmake/toolchains/: greensoftsdk_toolchain.cmake
cmake_modules/: get_nodes_filestream_path.cmake  remote_deploy.cmake  utility.cmake
core_engine/: CMakeLists.txt
core_engine/includes/impl/b4mesh/core_engine/: application_packet.hpp  b4mesh_p.hpp  client.hpp  consensus.hpp  transaction.hpp
core_engine/includes/interface/b4mesh/core_engine/: node.hpp
core_engine/ressources/: CMakeLists.txt  consensus.xml
core_engine/sources/: application_packet.cpp  b4mesh_p.cpp  block.cpp  client.cpp  consensus.cpp  node.cpp  session.cpp  transaction.cpp
dependencies/b4mesh_http/: CMakeLists.txt  CMakeSettings.json  README.md
dependencies/b4mesh_http/cmake/modules/toolchain/: import_greenSDK.cmake
dependencies/b4mesh_http/includes/b4mesh_http/b4mesh/http/: endpoint.hpp
dependencies/b4mesh_http/includes/b4mesh_http/b4mesh/net/: uri.hpp
dependencies/b4mesh_http/tests/: CMakeLists.txt
dependencies/b4mesh_http/tests/sources/: source.cpp
deploy/: CMakeLists.txt  deploy.cmake  deploy.sh
deploy/nginx/: add_transaction.conf
doc/architecture/api/: b4mesh_API.drawio
include/: application_packet.hpp  b4mesh_p.hpp  block.hpp  blockgraph.hpp  client.hpp  configs.hpp  consensus.hpp  node.hpp  session.hpp  transaction.hpp  utils.hpp
live_visualizer/: CMakeLists.txt  Makefile  README.md  UI_README.md  cmake_install.cmake  configuration.js  configuration.js.in  dashboard.html  dashboardstyle.css  index.html  install.cmake  live_visualizer.html  style.css
live_visualizer/nginx/: http_live_visualizer.conf  http_live_visualizer.conf.in
live_visualizer/scripts/: json_to_dot.js  json_to_dot_cluster.js  json_to_dot_time.js  poll_worker_task.js  string_hash.js  view_operations.js
live_visualizer/tests/: auto.py  automateMempool.py  automate_graph.py  automate_test.py  listtransa.py  lostransa.py  retransa.py  server.py  totaltransa.py
live_visualizer/tests/datas/: blockgraph.dot.json  blockgraphBis.dot.json  histojson.json  listransa  retrans  totaltransa
live_visualizer/tests/datas/tmp/: Mempool  Pourcentmempool  TestDatas.json  graphjson.json  histo.json  listtransa  losttransactions  mempool.json  retransactions  totaltransa  transactions  transactionspsec
nginx/: add_transaction.conf
patch/: nginx.patch
script/: launcher  recoverDraw  recoverResult  sendAll  txt2Png  txt2Png_time
sources/: CMakeLists.txt
sources/binary/: CMakeLists.txt
sources/binary/sources/: main.cpp
sources/core_engine/: CMakeLists.txt
sources/core_engine/includes/impl/b4mesh/core_engine/: application_packet.hpp  b4mesh_p.hpp  block.hpp  blockgraph.hpp  client.hpp  configs.hpp  consensus.hpp  session.hpp  transaction.hpp
sources/core_engine/includes/interface/b4mesh/core_engine/: node.hpp
sources/core_engine/ressources/: CMakeLists.txt  consensus.xml  state.xml
sources/core_engine/sources/: application_packet.cpp  b4mesh_p.cpp  block.cpp  blockgraph.cpp  client.cpp  consensus.cpp  node.cpp  session.cpp  transaction.cpp
sources/utils/: CMakeLists.txt
sources/utils/includes/b4mesh/utils/: utils.hpp
src/: application_packet.cpp  b4mesh_p.cpp  block.cpp  blockgraph.cpp  client.cpp  consensus.cpp  main.cpp  node.cpp  session.cpp  transaction.cpp  utils.cpp
tests/: CMakeLists.txt
toolchain/: CMakeLists.txt  greensoftsdk.cmake  greensoftsdk.toolchain.cmake  import.cmake  lazy_detection.cmake  libdbus-cpp.cmake
toolchain/cmake/: FileAppend.cmake  FileIO.cmake
utils/: CMakeLists.txt
utils/includes/b4mesh/utils/: utils.hpp
